Closed Bug 23635 Opened 26 years ago Closed 25 years ago

Mails with wrapped subject header shows wrong subject in both thread pane and message pane

Categories

(SeaMonkey :: MailNews: Message Display, defect, P3)

defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9

People

(Reporter: bugzilla, Assigned: jgmyers)

References

Details

(Whiteboard: [nsbeta1+])

Attachments

(4 files)

If you send a mail with this subject: 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 1234 5678 And read the mail in Mozilla there are some squares inserted into the subject after the 14'th block of numbers. Using build 2000011008 Attached is a image of the subject problem
This also affects the subject when replying. Then there seems to be inserted "spaces". A new bug or an effect of this?
QA Contact: lchiang → esther
henrik - probably the same cause.
Assignee: phil → ducarroz
QA Contact: esther → lchiang
Target Milestone: M16
Reassign to ducarroz, cc rhp. Marking M16
The "[]" is inserted if the Subject is wrapped into two lines in the mail headers. So if you have a mail with the following headers: --- To: hegetest@webmail.mime.dk Subject: [Fwd: [OFFTOPIC] Re: Where is store the address book in netscape messanger?] MIME-Version: 1.0 --- A square is inserted after the word "netscape". This must be a easy fix!
QA Contact: lchiang → esther
Still not fix on this bug...?
nope.
this is marked M16 so should be fixed by then. Right now, focus is on very "bad" bugs for M14
maybe for you rich?
Status: NEW → ASSIGNED
I guess it could be but I'm kind of swamped right now... - rhp
Not beta2 stopper. Marking M18.
Oops. Really marking M18 now...
Target Milestone: M16 → M18
Just giving a better bug-subject since this doesnt have anythning to do with very long subjects. It has to do with wrapped subjects that doesn't get unwrapped properly somewhere deepdown in some read header stuff. A wrap To field works fine... According to 3.1.1. http://info.internet.isi.edu:80/in-notes/rfc/files/rfc822.txt mozilla doesn't unfold correct since: Subject: test of wrap should be the same as: Subject: test of wrap Subject: test of wrap Subject: test of wrap
Summary: Funny chars inserted into subject in mails with very long subject → Mails with wrapped subject header shows wrong subject in both thread pane and message pane
Moving to future milestone. If this is a high frequency problem, please indicate this in the bug so we can reconsider.
Target Milestone: M18 → Future
This is very high frequency. How do I indicate this...?
Reassign to rhp, this looks like a mime parser problem.
Assignee: ducarroz → rhp
Status: ASSIGNED → NEW
Status: NEW → ASSIGNED
BTW: this also affects sorting of messages. See attached screenshot of messages sorted by Subject.
Changing qa assigned to myself.
QA Contact: esther → pmock
OS: Windows 98 → All
Hardware: PC → All
Blocks: 58114
Currently header unfolding is only done in the presence of MIME encoded-words. This is incorrect, headers should always be unfolded. Blocks a nsbeta1 bug, so nominating.
Keywords: nsbeta1
taking from rhp.
Assignee: rhp → sspitzer
Status: ASSIGNED → NEW
The header unfolding algorithm is described in RFC 822 section 3.1.1: Unfolding is accomplished by regarding CRLF immediately followed by a LWSP-char as equivalent to the LWSP-char. And in section 3.3: LWSP-char = SPACE / HTAB ; semantics = SPACE
marking nsbeta1+ and reassigning to ducarroz.
Assignee: sspitzer → ducarroz
Whiteboard: [nsbeta1+]
Target Milestone: Future → mozilla0.8
Attached patch Proposed fixSplinter Review
My proposed fix causes the MIME encoded-word decoder to unfold header continuations even if there are no encoded-words present in the input. It also changes MIME_StripContinuations() to conform to RFC 822. Note that this will cause a temporary regression in the handling of MIME encoded words. Whitespace will now appear between successive encoded-words where it did not before. This temporary regression will be fixed by the patch to bug 58114.
accepting the bug.
Status: NEW → ASSIGNED
Keywords: patch, review
moving to mozilla0.9
Target Milestone: mozilla0.8 → mozilla0.9
though, if we can get this reviewed and checked in, it can of course go in before mozilla0.9
looks good. R=ducarroz.
sr=bienvenu
one more thing, DON'T REMOVE YET MOZ_SECURITY CODE. Thanks
reassign to self
Assignee: ducarroz → jgmyers
Status: ASSIGNED → NEW
Fix checked into tip.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
looks fine now!!!!
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: