unfold all headers per RFC 822: bug 23635 r=ducarroz sr=bienvenu